# minecraft

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/: buffers.rs  camera.rs  display.rs  engine.rs  main.rs  object.rs  world.rs
src/object/: cube.rs  square.rs
src/shaders/: cubes.frag.glsl  cubes.vert.glsl  cubes_no_light.frag.glsl  fragment.glsl  ui.frag.glsl  ui.vert.glsl  vertex.glsl
