[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano-shaders = "0.29.0"
vulkano = "0.29.0"
vulkano-win = "0.29.0"
winit = "0.26.1"
bytemuck = { version = "1.9.1", features = ["derive"] }
cgmath = "0.18.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
tracing-tracy = "0.10.1"
